# 2021-1-Sistemas-Operacionais-II

./: .gitignore  README.md
Etapa1/: CMakeLists.txt  Makefile  README.md
Etapa1/code/: CMakeLists.txt
Etapa1/code/client/: CMakeLists.txt
Etapa1/code/client/ClientConnectionManager/: CMakeLists.txt
Etapa1/code/client/ClientConnectionManager/include/: ClientConnectionManager.hpp
Etapa1/code/client/ClientConnectionManager/src/: ClientConnectionManager.cpp
Etapa1/code/client/CommandExecutor/: CMakeLists.txt
Etapa1/code/client/CommandExecutor/include/: CommandExecutor.hpp
Etapa1/code/client/CommandExecutor/src/: CommandExecutor.cpp
Etapa1/code/client/app/: CMakeLists.txt
Etapa1/code/client/app/src/: main.cpp  parser.cpp
Etapa1/code/common/: CMakeLists.txt
Etapa1/code/common/PacketBuilder/include/: PacketTypes.hpp
Etapa1/code/common/PacketBuilder/src/: PacketBuilder.cpp
Etapa1/code/common/Stoppable/: CMakeLists.txt
Etapa1/code/common/Stoppable/include/: Stoppable.hpp
Etapa1/code/common/Stoppable/src/: Stoppable.cpp
Etapa1/code/server/: CMakeLists.txt
Etapa1/code/server/MessageManager/: CMakeLists.txt
Etapa1/code/server/MessageManager/include/: MessageManager.hpp
Etapa1/code/server/MessageManager/src/: MessageManager.cpp
Etapa1/code/server/PersistenceManager/: CMakeLists.txt
Etapa1/code/server/PersistenceManager/include/: PersistenceManager.hpp
Etapa1/code/server/PersistenceManager/src/: PersistenceManager.cpp
Etapa1/code/server/PersistenceManager/test/: BasicFunctionalityTests.cpp  CMakeLists.txt
Etapa1/code/server/PersistenceManager/test/resources/databases/: threeUsers.db
Etapa1/code/server/PersistenceManager/test/resources/ground_truths/: threeUsersOneFollower.txt  user0.txt
Etapa1/code/server/PersistentUser/: CMakeLists.txt
Etapa1/code/server/PersistentUser/include/: PersistentUser.hpp
Etapa1/code/server/PersistentUser/src/: PersistentUser.cpp
Etapa1/code/server/ProducerConsumerBuffer/include/: ProducerConsumerBuffer.hpp
Etapa1/code/server/ProducerConsumerBuffer/src/: ProducerConsumerBuffer.cpp
Etapa1/code/server/ServerConnectionManager/: CMakeLists.txt
Etapa1/code/server/ServerConnectionManager/include/: ServerConnectionManager.hpp
Etapa1/code/server/ServerConnectionManager/src/: ServerConnectionManager.cpp
Etapa1/code/server/SessionController/: CMakeLists.txt
Etapa1/code/server/SessionController/include/: SessionController.hpp
Etapa1/code/server/SessionController/src/: SessionController.cpp
Etapa1/code/server/SessionMonitor/: CMakeLists.txt
Etapa1/code/server/SessionMonitor/include/: SessionMonitor.hpp
Etapa1/code/server/SessionMonitor/src/: SessionMonitor.cpp
Etapa1/code/server/User/include/: User.hpp
Etapa1/code/server/User/src/: User.cpp
Etapa1/code/server/app/: CMakeLists.txt
Etapa1/code/server/app/include/: ClientFunctions.hpp
Etapa1/code/server/app/src/: ClientFunctions.cpp  main.cpp
Etapa1/include/: parser.hpp
Etapa1/src/: clientMain.cpp  main.cpp  parser.cpp  serverMain.cpp
Etapa2/: README.md
Etapa2/code/client/: CMakeLists.txt
Etapa2/code/client/ClientConnectionManager/: CMakeLists.txt
Etapa2/code/client/CommandExecutor/: CMakeLists.txt
Etapa2/code/client/app/: CMakeLists.txt
Etapa2/code/common/: CMakeLists.txt
Etapa2/code/common/CriticalSessionControl/: CMakeLists.txt
Etapa2/code/common/CriticalSessionControl/include/: Flag.hpp  RWSemaphore.hpp  Semaphore.hpp
Etapa2/code/common/CriticalSessionControl/src/: Flag.cpp  RWSemaphore.cpp  Semaphore.cpp
Etapa2/code/common/PacketBuilder/: CMakeLists.txt
Etapa2/code/server/: CMakeLists.txt
Etapa2/code/server/ClientFunctions/: CMakeLists.txt
Etapa2/code/server/ClientFunctions/include/: ClientFunctions.hpp
Etapa2/code/server/ClientFunctions/src/: ClientFunctions.cpp
Etapa2/code/server/MessageManager/: CMakeLists.txt
Etapa2/code/server/MessageManager/include/: MessageManager.hpp
Etapa2/code/server/MessageManager/src/: MessageManager.cpp
Etapa2/code/server/PersistenceManager/: CMakeLists.txt
Etapa2/code/server/PersistenceManager/include/: PersistenceManager.hpp
Etapa2/code/server/PersistenceManager/src/: PersistenceManager.cpp
Etapa2/code/server/PersistenceManager/test/resources/ground_truths/: threeUsersPlusOne.txt  twoUsersWithFollowers.txt
Etapa2/code/server/PersistentUser/: CMakeLists.txt
Etapa2/code/server/PersistentUser/include/: PersistentUser.hpp
Etapa2/code/server/PersistentUser/src/: PersistentUser.cpp
Etapa2/code/server/ProducerConsumerBuffer/: CMakeLists.txt
Etapa2/code/server/ProducerConsumerBuffer/include/: ProducerConsumerBuffer.hpp
Etapa2/code/server/ProducerConsumerBuffer/src/: ProducerConsumerBuffer.cpp
Etapa2/code/server/ReplicaManager/: CMakeLists.txt
Etapa2/code/server/ReplicaManager/include/: ElectionManager.hpp  ReplicaConnection.hpp  ReplicaManager.hpp  ReplicationManager.hpp
Etapa2/code/server/ReplicaManager/src/: ElectionManager.cpp  ReplicaConnection.cpp  ReplicaManager.cpp  ReplicationManager.cpp
Etapa2/code/server/Server/: CMakeLists.txt
Etapa2/code/server/Server/include/: Server.hpp
Etapa2/code/server/Server/src/: Server.cpp
Etapa2/code/server/ServerConnectionManager/: CMakeLists.txt
Etapa2/code/server/ServerConnectionManager/include/: ServerConnectionManager.hpp
Etapa2/code/server/ServerConnectionManager/src/: ServerConnectionManager.cpp
Etapa2/code/server/SessionController/: CMakeLists.txt
Etapa2/code/server/SessionController/include/: SessionController.hpp
Etapa2/code/server/SessionController/src/: SessionController.cpp
Etapa2/code/server/SessionMonitor/: CMakeLists.txt
Etapa2/code/server/SessionMonitor/include/: SessionMonitor.hpp
Etapa2/code/server/SessionMonitor/src/: SessionMonitor.cpp
Etapa2/code/server/User/: CMakeLists.txt
Etapa2/code/server/User/src/: User.cpp
Etapa2/code/server/app/: CMakeLists.txt
Etapa2/code/server/app/include/: ClientFunctions.hpp  parser.hpp
Etapa2/code/server/app/src/: ClientFunctions.cpp  main.cpp  parser.cpp
PG1-WebSockets/: pom.xml
PG2-WebServices/: pom.xml
(+19 files in other folders)
