cmake_minimum_required(VERSION 3.17)

add_subdirectory(ServerConnectionManager)
add_subdirectory(PersistenceManager)
add_subdirectory(ProducerConsumerBuffer)
add_subdirectory(MessageManager)
add_subdirectory(SessionController)
add_subdirectory(SessionMonitor)
add_subdirectory(User)
add_subdirectory(PersistentUser)
add_subdirectory(ReplicaManager)
add_subdirectory(Server)
add_subdirectory(app)
